[tool.poetry]
name = "routx"
version = "0.1.0"
description = "The RoutX HTTP router."
authors = ["Thibaut Frain <thibaut.frain@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
